# LLMsMultiagentEnsemble

./: README.md  pyproject.toml  setup.sh
.ipynb_checkpoints/: pyproject-checkpoint.toml  requirements-checkpoint.txt
demo/: demo.ipynb  ensemble_config.yaml  json_output_template.json  prompt_S02.txt  sys_msg_K01.txt
demo/.ipynb_checkpoints/: demo-checkpoint.ipynb  ensemble_config-checkpoint.yaml  prompt_S02-checkpoint.txt  variable-value_list-checkpoint.json
demo/beluga-70b_S02/: config_llm_app.yaml
demo/data/: ECG_Absert.csv  ECG_Free7Demo_aggregated.csv  ECG_Free7Demo_voted.csv  ECG_data.csv
demo/gemma7b_S02/: config_llm_app.yaml
demo/llama3-70b_S02/: config_llm_app.yaml
demo/mistral-openorca_S02/: config_llm_app.yaml
demo/openhermes_S02/: config_llm_app.yaml
demo/qwen-72b_S02/: config_llm_app.yaml
demo/qwen2-72b_S02/: config_llm_app.yaml
demo/util/: util.py
ensemble_llms_app/: ensemble_llms_app.py
evaluate/: evaluate.py
example_project_small/: demo.ipynb  demo_lung.ipynb  ensemble_config.yaml  json_output_template.json  variable-value_dict.json
example_project_small/beluga70b_P07/: config_llm_app.yaml
example_project_small/data/: lung_small_example_project_aggregated.csv  lung_small_example_project_voted.csv  small_example_project_voted.csv  tcga_pan_lung_samples.csv
example_project_small/gemma7b_P07/: config_llm_app.yaml
fix_json/: update_notes.txt
llm_agent/: llm_agent.py  update_notes.txt
llm_app/: llm_app.py
tmp/: ensemble_config.yaml  prompt_p07.txt  setup.py  system_message.txt  test.ipynb  variable-value_list.json
(+163 files in other folders)
