[tool.poetry]
name = "llm-agent"
version = "0.1.0"
description = "LLM powered Agent"
authors = ["Jingwei Huang <jingwei.huang@utsouthwestern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
accelerate = "^1.10.1"
cuda = "^12.9"
huggingface_hub = "^0.30.2"
ollama = "^0.4.8"
openai = "^1.100.3"
python = "^3.11"
pytorch = "^2.7.1"
pandas = "^2.2.3"
torch = "^2.8.0+cu129"
transformers = "^4.51.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
